--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shiv's Portfolio</title>
+    <title>poop</title>
 </head>
 <body>
-    
+    <h1>If you're here from my instagram, hello there! Please note that this website is currently under development and I will be adding more content in the near future. Thanks for visiting!</h1>
 </body>
 </html>
