--- a/index.html
+++ b/index.html
@@ -4,9 +4,85 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>poop</title>
+    <title>Behind You</title>
+    <link rel="icon" href="./hand.png">
+
+    <style>
+      body {
+        background-color: #000000;
+      }
+        button {
+          padding: 12px 30px;
+          font-size: 20px;
+          margin: 20px;
+          border-radius: 5px;
+          background-color: #2d2d2d;
+          color: #ff0000;
+          cursor: pointer;
+          border: none;
+          font-family: 'Courier New', Courier, monospace;
+          font-style: italic;
+          font-weight: bold;
+        }
+  
+        p {
+          font-size: 20px;
+          font-weight: bold;
+          text-align: left;
+          margin: 20px;
+          color: red;
+          font-family: "Courier New", Courier, monospace;
+        }
+        #jumpscare {
+        display: none;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-image: url("./horror.jpg");
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        }
+      </style>
 </head>
 <body>
-    <h1>If you're here from my instagram, hello there! Please note that this website is currently under development and I will be adding more content in the near future. Thanks for visiting!</h1>
+  <button id="tellFortune">Tell Fortune</button>
+  <p id="fortune"></p>
+  <div id="jumpscare"></div>
+
+  <script>
+    const fortunes = [
+      "I have your soul....",
+      "Look behind you....",
+      "A nightmare has struck....",
+      "Look outside your window....",
+      "I'm watching you......",
+    ];
+
+    const tellFortune = document.getElementById("tellFortune");
+    const fortuneText = document.getElementById("fortune");
+    const jumpscare = document.getElementById("jumpscare");
+    const audio = new Audio("./scream.mp3");
+
+    tellFortune.addEventListener("click", function() {
+      const randomIndex = Math.floor(Math.random() * fortunes.length);
+      let i = 0;
+      fortuneText.innerText = "";
+      const typeWriter = setInterval(() => {
+        if (i < fortunes[randomIndex].length) {
+          fortuneText.innerHTML += fortunes[randomIndex][i] === " " ? "&nbsp;" : fortunes[randomIndex][i];
+          i++;
+        } else {
+          clearInterval(typeWriter);
+          setTimeout(() => {
+            audio.play();
+            jumpscare.style.display = "block";
+          }, 5000);
+        }
+      }, 50);
+    });
+  </script>
 </body>
 </html>
