--- a/index.html
+++ b/index.html
@@ -48,17 +48,14 @@
       </style>
 </head>
 <body>
-  <button id="tellFortune">Tell Fortune</button>
+  <button id="tellFortune">Click me</button>
   <p id="fortune"></p>
   <div id="jumpscare"></div>
 
   <script>
     const fortunes = [
-      "I have your soul....",
       "Look behind you....",
-      "A nightmare has struck....",
-      "Look outside your window....",
-      "I'm watching you......",
+      "I'm watching you.....",
     ];
 
     const tellFortune = document.getElementById("tellFortune");
