--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <li><a href="#about">about</a></li>
             <li><a href="#skills">skills</a></li>
             <li><a href="#services">services</a></li>
-            <li><a href="#contact">contact</a></li>
+            <li><a href="#contact">reach out</a></li>
             <div class="bx bx-moon" id="darkmode"></div>
         </ul>
     </header>
