--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 </div>
 
                 <div class="bars-box">
-                    <h3>javascript</h3>
+                    <h3>luau/lua</h3>
                     <span>59%</span>
                     <div class="light-bar"></div>
                     <div class="percent-bar js-bar"></div>
